# GoGame

./: .gitignore  CMakeLists.txt  README.md  copy-res.cmake.old
include/: Animation.hpp  Board.hpp  Game.hpp  Headers.hpp  Random.hpp  Settings.hpp  Stats.hpp  Stone.hpp  StoneGroup.hpp  Test.hpp  Types.hpp
include/gui/: Button.hpp  GuiComponent.hpp  IGuiComponent.hpp
include/states/: GameState.hpp  IState.hpp  MenuState.hpp  SettingsState.hpp  State.hpp  StatsState.hpp
src/: Animation.cpp  Board.cpp  Game.cpp  Main.cpp  Settings.cpp  Stats.cpp  StoneGroup.cpp  Test.cpp  main.cpp
src/gui/: Button.cpp  GuiComponent.cpp  IGuiComponent.cpp
src/states/: GameState.cpp  IState.cpp  MenuState.cpp  SettingsState.cpp  State.cpp  StatsState.cpp
tests/: mytest.cpp
